x close window OK

--- a/src/Makefile
+++ b/src/Makefile
@@ -1,6 +1,6 @@
 CXX = g++-10
 CPPFLAGS = -I../ -pthread
-CXXFLAGS = -g -c -std=c++20 -fmax-errors=1 $(shell pkg-config opencv4 --cflags)
+CXXFLAGS = -g -c -std=c++20 -fmax-errors=1 $(shell pkg-config --cflags opencv4 gstreamermm-1.0 )
 DIR = $(notdir $(shell pwd))
 OBJ = $(patsubst %.cc, ../obj/%.$(DIR).o, $(wildcard *.cc))
 MAIN_OBJ = $(patsubst %.cpp, ../obj/%.$(DIR).x, $(wildcard *.cpp))
